[tool.poetry]
name = "apodwp"
version = "1.0.0"
description = "Astronomy Picture Of the Day Wallpaper"
authors = ["Thomas ten Cate <ttencate@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
bs4 = "^0.0.1"
pillow = "^9.0.1"
html5lib = "^1.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
apodwp = "apodwp:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
