[tool.poetry]
name = "apodwp"
version = "1.0.0"
description = "Astronomy Picture Of the Day Wallpaper"
authors = ["Thomas ten Cate <ttencate@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
beautifulsoup4 = "^4.11.1"
pillow = "^9.3.0"
html5lib = "^1.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
apodwp = "apodwp:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
